# RExQuad

./: .gitignore  .gitmodules  Allocation_free.md  CMakeLists.txt  Manifest.toml  Project.toml  README.md  arduino-cli.yaml  build.py  build.sh  ground_startup.jl  lqr_gain.json  quadrotor_startup.jl
Arduino/IMU/: IMU.ino  imu_vicon_relay.hpp
Arduino/IMU_nanopd/: IMU_helper.cpp  IMU_helper.h  IMU_nanopd.ino  receiver.cpp  receiver.hpp
Arduino/MOTOR/: MOTOR.ino  motor_commands.cpp
Arduino/MOTOR_nanopd/: MOTOR_nanopd.ino  motor_commands.cpp  motor_commands.hpp
Arduino/libraries/: Set2.nb.html
Arduino/libraries/msgs/: filtered_state_msg.pb.c  filtered_state_msg.pb.h  imu_msg.pb.c  imu_msg.pb.h  motors_msg.pb.c  motors_msg.pb.h  quad_info_msg.pb.c  quad_info_msg.pb.h  vicon_msg.pb.c  vicon_msg.pb.h
Arduino/sketch_oct04a/: sketch_oct04a.ino
Arduino/sketch_oct05d/: sketch_oct05d.ino
Arduino/sketch_oct05e/: sketch_oct05e.ino
Arduino/sketch_oct06a/: sketch_oct06a.ino
Arduino/sketch_sep22a/: sketch_sep22a.ino
Arduino/sketch_sep22b/: sketch_sep22b.ino
Arduino/sketch_sep27a/: sketch_sep27a.ino
data/: imu_2021-07-12T14:36:38.129.csv  vicon_2021-07-12T14:36:38.127.csv
data/imu_sys_id/: covariance_identification.jl  record_imu_data.jl
data/imu_sys_id/data/: covariance.csv  imu_data.csv  mean.csv  record_IMU_data.jl
launch/: ground_launch.jl  jetson_launch.jl  relay_launch.jl  test_launch.jl
msgs/: filtered_state_msg_pb.jl  ground_info_msg_pb.jl  imu_msg_pb.jl  message_pb.jl  messaging.jl  motors_msg_pb.jl  quad_info_msg_pb.jl  vicon_msg_pb.jl
nodes/: README.md  constants.jl  launch.jl  quadrotor_model.jl  setup.toml  visualizer.jl
nodes/dummy_pub_sub_nodes/: dummy_nodes.jl
nodes/filter/: Project.toml  filtered_state_pub.jl
nodes/filtered_state_pub/: filtered_state_pub.jl  filtered_state_pub_debug.jl  imu_states.jl
nodes/filtered_state_publisher/: filtered_state_publisher.jl  filtered_state_publisher_debug.jl  filtered_state_publisher_node.jl  imu_states.jl  test.jl
nodes/ground_link/: ground_link.jl  ground_link_node.jl  visualizer.jl
nodes/imu_node/: imu_publisher.jl
nodes/imu_vicon_pub/: imu_vicon_pub.jl  imu_vicon_publisher.jl
nodes/imu_vicon_publisher/: imu_vicon_publisher.jl  imu_vicon_publisher_node.jl  imu_vicon_publisher_node_constant.jl
nodes/jetson_link/: imu_publisher.jl  imu_subscriber.jl  jetson_link.jl  jetson_link_debug.jl  jetson_link_node.jl
nodes/link_jetson/: link_jetson.jl
nodes/link_relay/: link_relay.jl
nodes/logging/: imu_vicon_logger.jl
nodes/lqr_hover_controller/: constants.jl  generate_lqr_gains.jl  lqr_hover_controlle_debug.jl  lqr_hover_controller.jl  lqr_hover_controller_debug.jl  lqr_hover_controller_node.jl  motor_publishing_test.jl  test_controller.jl
nodes/mpc_hover_controller/: mpc_helper.jl  mpc_hover_controller.jl  mpc_hover_controller_debug.jl
nodes/serial_relay_start/: serial_relay_start.jl
nodes/state_estimator/: serial_relay_start.jl  state_estimator_node.jl  state_estimator_node_debug.jl
nodes/utils/: PubSubBuilder.jl  test_proto.jl
nodes/vicon_node/RExLabVicon/: build.sh
nodes/vicon_relay/: Project.toml  simulated_vicon_relay.jl  vicon.jl  vicon_relay.jl  vicon_relay_debug.jl
proto/: ground_info_msg.proto  imu_msg.proto  motors_msg.proto  quad_info_msg.proto
src/: PubSubBuilder.jl  README.md  RExQuad.jl  constants.jl  filter_node.jl  imu_states.jl  node.jl  quadrotor_model_robot_dynamics.jl  setup.toml
src/Arduino/IMU/: IMU.ino  (+2 more)
src/common/: CMakeLists.txt  constants.hpp  control.cpp  control.hpp  delayed_mekf.c  delayed_mekf.h  estimator.cpp  estimator.hpp  gen_mpc.py  linalg.hpp  linear_algebra.c  linear_algebra.h  lqr_constants.hpp  messages.cpp  messages.hpp  mpc_data.json  mpc_types.hpp  osqpsolver.cpp  osqpsolver.hpp  pose.cpp  pose.hpp  problem.cpp  problem.hpp  problem_data.c  problem_data.h  quaternion.cpp  quaternion.hpp  riccati.cpp  riccati.hpp  rotations.c  rotations.h  utils.cpp  utils.hpp  vector_stack.c  vector_stack.h  workspace.c  workspace.h
src/common/test/: CMakeLists.txt  control_test.cpp  delayed_mekf_test.cpp  filter_data.c  filter_data.h  osqpsolver_test.cpp  problem_test.cpp  riccati_test.cpp  vector_stack_test.cpp
src/data/: lqr_gain.json
src/firmware/: README.md
src/firmware/libraries/RExQuad/: CMakeLists.txt  README.md  constants.hpp  motors.cpp  motors.hpp  quad_utils.cpp  quad_utils.hpp  sensors.cpp  sensors.hpp  serial_utils.cpp  serial_utils.hpp
src/ground_link/: ground_link_node.jl  vicon_listener.jl  visualizer.jl
src/ground_master/: ground_master_node.jl  visualizer.jl
src/jetson_link/: jetson_link_node.jl
src/jetson_master/: jetson_master_node.jl
src/launch/: launch.jl  launch_jetson_link.jl
src/lqr_hover_controller/: generate_lqr_gains.jl  lqr_hover_controller_node.jl  motor_off.jl  motor_publishing_test.jl  motor_spin_up.jl  quadrotor_model.jl  serial_relay_start.jl  test_controller.jl
src/mocap/: CMakeLists.txt  Mocap.cpp  Mocap.hpp  callbacks.cpp  callbacks.hpp  fake_mocap.cpp  mocap.cpp
src/msgs/: message_pb.jl  messaging.jl  vicon_msg_pb.jl
src/simulator/: CMakeLists.txt  Manifest.toml  Project.toml  controllers.jl  dynamics.jl  estimator.jl  gen_lqr_gain.jl  messages.jl  ratelimiter.jl  riccati.jl  rotations.h  rotations.jl  simulator.jl  sitl.jl  utils.jl  visualization.jl
src/simulator/src/: CMakeLists.txt  client.c  control_node.cpp  fake_mocap.cpp  fake_onboard.cpp  measurement_node.cpp  mocap_relay.cpp  onboard_relay.cpp  server.c  sim_utils.cpp  sim_utils.hpp
src/simulator/test/: delay_test.jl  estimator_test.jl  latency_test.jl  mpc_test.jl  rotations_test.jl  simulator_test.jl  sitl_test.jl  state_estimate_test.jl
src/state_estimator/: serial_relay_start.jl  state_estimator_node.jl  state_estimator_node_debug.jl
sys_ims/: build.jl
test/: Manifest.toml  Project.toml  basic_pubsub.jl  launch_ground_link.jl  launch_jetson_link.jl  launch_lqr_controller.jl  launch_state_estimator.jl  test.jl
testing/: buffer.jl  filter.jl  imu_dynamics.jl  states_errorstates.jl
tools/: client.py  zecho.py
(+43 files in other folders)
