add_executable(measurement_node
  measurement_node.cpp
)
target_link_libraries(measurement_node
  PRIVATE
  libzmq
  fmt::fmt
  libserialport
  quadutils
  quadcommon
)

add_executable(control_node
  control_node.cpp
)
target_link_libraries(control_node
  PRIVATE
  libzmq
  fmt::fmt
  libserialport
  quadutils
  quadcommon
)

add_executable(server
  server.c
)
target_link_libraries(server
  PRIVATE
  libzmq
  fmt::fmt
)

add_executable(client
  client.c
)
target_link_libraries(client
  PRIVATE
  libzmq
  fmt::fmt
  libserialport
  quadutils
)